change speed works

--- a/tractopelle.html
+++ b/tractopelle.html
@@ -4,20 +4,10 @@
 
 <body>
   {{> keypad}}
-  {{> touchMotors}}
+  <div class="gauge"></div>
 </body>
 
 <template name="keypad">
   <h1>Keypad Controller</h1>
   <div class="controller"> </div>
 </template>
-
-<template name="touchMotors">
-  <h1>touchMotors</h1>
-  <div class="touchController">
-    <div class="gauge">
-      <div class="speed"></div>
-    </div>
-    <label>{{speed}}</label>
-</template>
-
